--- a/templates/index.html
+++ b/templates/index.html
@@ -18,25 +18,27 @@
 <body>
 <br>
 <br>
+<div>
 {% for category in category_list %}
     <div class="btn-group dropright">
-        <button type="button" class="btn btn-secondary dropdown-toggle rounded-0" style="width: 150px" data-toggle="dropdown" aria-haspopup="true"
+        <button type="button" class="btn btn-info dropdown-toggle rounded-0" style="width: 200px" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
             {{ category }}
         </button>
-        <div class="dropdown-menu" style="width: 150px">
+        <div class="dropdown-menu dropdown-menu-right">
               {% for note in category.notes.all %}
                     <a  class="dropdown-item" href="{{ note.get_absolute_url }}">{{note.title}}</a>
               {% endfor %}
             <div class="dropdown-divider"></div>
-            <div class="mx-auto" style="width: 120px;"><a href="{% url 'note-create' category.slug %}"> Добавить заметку </a>
+            <div class="mx-auto"><a href="{% url 'note-create' category.slug %}"> Добавить заметку </a>
             </div>
         </div>
     </div>
     <br>
 {% endfor %}
+    <a class="btn btn-info rounded-0" style="width: 200px" href="{% url 'category-create' %}" role="button">Добавить категорию</a>
 
-<a href="{% url 'category-create' %}"> Добавить категорию </a>
+</div>
 
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
