--- a/templates/noteapp/note_form.html
+++ b/templates/noteapp/note_form.html
@@ -11,7 +11,10 @@
         <table>
             {{ form.as_p }}
         </table>
-    <input type="submit" value="Добавить">
+        <div class="form-group mx-sm-3 mb-2">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Сохранить</button>
     <a href="{% url 'index' %}">Отмена</a>
 </form>
 
