update view for add category on index

--- a/templates/index.html
+++ b/templates/index.html
@@ -36,8 +36,16 @@
     </div>
     <br>
 {% endfor %}
-    <a class="btn btn-info rounded-0" style="width: 200px" href="{% url 'category-create' %}" role="button">Добавить категорию</a>
-
+<form method="post" action=""> {% csrf_token %}
+  <div class="btn btn-info rounded-0" style="width: 200px">
+    <div class="input-group">
+      <input type="text" class="form-control" name="addnewcat" placeholder="Add new">
+      <span class="input-group-btn">
+        <button class="btn btn-secondary" type="submit">+</button>
+      </span>
+    </div>
+  </div>
+</form>
 </div>
 
 
