--- a/templates/noteapp/note_form.html
+++ b/templates/noteapp/note_form.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-<form action="" method="post">
-    {% csrf_token %}
-        <table>
-            {{ form.as_p }}
-        </table>
-        <button type="submit" class="btn btn-primary mb-2">Сохранить</button>
-    <a href="{% url 'index' %}">Отмена</a>
-</form>
-
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 col-xl-4 mx-auto">
+        <div class="card card-signin my-5 bg-light text-dark">
+          <div class="card-body">
+            <h5 class="card-title text-center">Please, enter the title of note</h5>
+              <form action="" method="post">
+                  {% csrf_token %}
+                    {{ form.as_p }}
+              <button class="btn btn-lg btn-block text-uppercase bg-secondary text-white" type="submit">Save</button>
+              <a class="d-block text-center mt-2 small text-muted" href="{% url 'index' %}">Cancel</a>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+{% endblock content %}
