--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
               {% for note in category.notes.all %}
                     <a  class="dropdown-item" href="{{ note.get_absolute_url }}">{{note.title}}</a>
               {% endfor %}
-            <div class="mx-auto" style="width: 132px"><a class="text-warning" href="{% url 'note-create' category.slug %}"> Добавить заметку </a>
+            <div class="mx-auto" style="width: 132px"><a class="text-warning" href="{% url 'Note-create' category.slug %}"> Добавить заметку </a>
             </div>
         </div>
     </div>
